# smol-brain

./: .env.example  .gitignore  README.md  docker-compose.vllm.yml  docker-compose.yml
infra/redis/: README.md  redis.conf.example
services/python-gateway/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  gunicorn_conf.py  pyproject.toml  requirements-dev.txt  requirements.txt
services/python-gateway/app/: __init__.py  main.py
services/python-gateway/app/api/: __init__.py  dependencies.py  middleware.py
services/python-gateway/app/api/routes/: __init__.py  chat.py  health.py
services/python-gateway/app/core/: __init__.py  config.py  resilience.py
services/python-gateway/app/observability/: __init__.py  logging.py  metrics.py
services/python-gateway/app/schemas/: __init__.py  chat.py
services/python-gateway/app/services/: __init__.py  cache.py  llm.py  rate_limit.py
services/python-gateway/tests/: __init__.py  conftest.py
services/python-gateway/tests/e2e/: __init__.py  test_live_smoke.py
services/python-gateway/tests/integration/: __init__.py  test_api.py  test_cache.py  test_rate_limit.py
services/python-gateway/tests/unit/: __init__.py  test_config.py  test_dependencies.py  test_llm.py  test_observability.py  test_resilience.py  test_schemas.py
